# internal/domain/models/service_key_metadata.go
@@ -1,0 +1,10 @@
+package models
+
+type ServiceKeyMetadata struct {
+	ID        string
+	Name      string
+	Role      string
+	CreatedAt string
+	ExpiresAt *string
+	RevokedAt *string
+}
